# misspy

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  SECURITY.md  deco.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/: release.yml
.github/ISSUE_TEMPLATE/: blank-issue-template-.md  bug_report.md  feature_request.md
.github/workflows/: auto-release.yml  codeql.yml  docs.yml  main.yml  mkd.yml  pr-auto-approve.yml  publish.yml  release.yml  upload.yml  whl.yml
dev_bot/: main.py
dev_bot/src/: bot.py  notes.py  pages.py
docs/: index.md  mkdocs.yml
docs/docs/: drive.md  index.md  install.md  quickstart.md  streaming.md
docs/docs/en/: drive.md  index.md  install.md  quickstart.md  streaming.md
docs/reference/: auth.md  notes.md
docs/site/: 404.html  index.html
docs/site/drive/: index.html
docs/site/en/: index.html
docs/site/en/drive/: index.html
docs/site/en/install/: index.html
docs/site/en/quickstart/: index.html
docs/site/en/streaming/: index.html
docs/site/install/: index.html
docs/site/quickstart/: index.html
docs/site/search/: search_index.json
docs/site/streaming/: index.html
docs/tutorial/: index.md  stream.md  upload_file.md
example/: box.py  miauth.py  printnote.py
misspy/: MiWeb.py  __init__.py  auth.py  channels.py  cli.py  client.py  clips.py  drive.py  exception.py  federation.py  hashtags.py  hook.py  http.py  inner.py  log.py  not_recommended.py  notes.py  pages.py  permissions.py  reaction.py  server.py  types.py  user.py  util.py  ws.py
misspy/core/: __init__.py  exception.py  http.py  ws.py
misspy/ext/: MiAuth.py  __init__.py
misspy/ext/admin/: ad.py  admin.py  raw.txt
misspy/ext/commands/: bot.py  hook.py  ws.py
overrides/partials/: header.html
