[tool.poetry]
name = "misspy"
version = "0.0.0"
description = "High-performance Misskey API framework"
authors = ["sonyakun <contact@sonyakun.xyz>"]
packages = [{include = "misspy"}]
readme = "README.md"
documentation = "https://misspy.sonyakun.com/docs/en"
repository = "https://github.com/sonyakun/misspy"

[tool.poe.tasks]
build = "poetry build"
publish = "poetry publish"

[tool.poetry.dependencies]
python = "^3.8"
websockets = "^11.0.3"
attrdictionary = "^1.0.0"
aiodns = "^3.0.0"
aiohttp = "^3.8.5"
faust-cchardet = { version = "^2.1.19", optional = true }
poethepoet = { version = ">=0.22.1,<0.25.0", optional = true }
requests = "^2.31.0"
httpx = "^0.25.0"

[tool.poetry.extras]
speedups = ["faust-cchardet"]
dev = ["poethepoet"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
