[tool.poetry]
name = "misspy"
version = "0.0.0"
description = "High-performance Misskey API framework"
authors = ["sonyakun <contact@sonyakun.xyz>"]
packages = [{include = "misspy"}]
readme = "README.md"
homepage = "https://misspy.xyz/"
documentation = "https://docs.misspy.xyz/"
repository = "https://github.com/misspy-development/misspy"
keywords = [
    "misskey", 
    "misskey-api",
    "misskey-bot"
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poe.tasks]
build = "poetry build"
publish = "poetry publish"

[tool.poetry.urls]
Changelog = "https://misspy.xyz/History/"

[tool.poetry.dependencies]
python = "^3.8"
websockets = "^11.0.3"
attrdictionary = "^1.0.0"
aiodns = "^3.0.0"
aiohttp = "^3.8.5"
faust-cchardet = { version = "^2.1.19", optional = true }
poethepoet = { version = ">=0.22.1,<0.25.0", optional = true }
requests = "^2.31.0"
httpx = "^0.25.0"

[tool.poetry-version-plugin]
source = "git-tag"

[tool.poetry.extras]
speedups = ["faust-cchardet"]
dev = ["poethepoet"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
